<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Status Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/status_card"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/text_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/status_background"
                    android:padding="16dp"
                    android:textAlignment="center"
                    android:textColor="@color/ripple_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/inspection_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_marginTop="50dp"
                    android:indeterminate="true"
                    android:visibility="visible" />


            </androidx.cardview.widget.CardView>

            <!-- Request Inspection Button -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/no_inspection"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:adjustViewBounds="true"
                    android:padding="156dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/oops" />

                <ImageView
                    android:id="@+id/no_inspection_text"
                    android:layout_width="293dp"
                    android:layout_height="276dp"
                    android:layout_below="@id/no_inspection"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="-252dp"
                    android:layout_marginEnd="28dp"
                    android:adjustViewBounds="true"
                    android:forceHasOverlappingRendering="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/text" />

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/request_inspection_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/request_inspection"
                android:textColor="@color/button_text_color"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="8dp"
                app:elevation="4dp" />


            <!-- Time Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/time_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Inspection Details TextView -->
                    <TextView
                        android:id="@+id/inspection_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/inspection_details"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <!-- Line Separator -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="1dp"
                        android:background="@android:color/darker_gray" />

                    <!-- Inspection ID TextView -->
                    <TextView
                        android:id="@+id/inspection_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/inspection_id"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="16sp" />

                    <!-- Elapsed Time TextView -->
                    <TextView
                        android:id="@+id/elapsed_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp" />

                    <!-- Expected Finish Time TextView -->
                    <TextView
                        android:id="@+id/expected_finish_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp" />

                    <!-- Cracks Found TextView -->
                    <TextView
                        android:id="@+id/cracks_found"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="Cracks Found: 0"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Map Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/map_card"
                android:layout_width="match_parent"
                android:layout_height="480dp"
                android:visibility="gone"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <org.osmdroid.views.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/focus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_focus"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/map_card"
        app:layout_anchorGravity="bottom|end"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>